--- a/debug/Makefile
+++ b/debug/Makefile
@@ -16,7 +16,7 @@ pinreset:
 	#$(OPENOCD) -f $(OPENOCD_CFG) -c "init; reset halt; sleep 1; mww phys 0x4001e504 2; mww 0x40000544 1; reset; shutdown;"
 
 debug:
-	$(OPENOCD) -c "set WORKAREASIZE 0;" -f $(OPENOCD_CFG)
+	$(OPENOCD) -c "set WORKAREASIZE 0;" -f $(OPENOCD_CFG) -c "init; arm semihosting enable;"
 	
 gdb:
 	echo "target remote localhost:3333    \n\
